[package]
name = "texture-packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
image = "0.24.6"
libktx-rs = "0.3.3"
rectangle-pack = "0.4.2"
ron = "0.8.0"
serde = "1.0.164"
